build_repository.yml
Added write all permissions to the repisitory builder workflow.

--- a/.github/workflows/build_repository.yml
+++ b/.github/workflows/build_repository.yml
@@ -9,6 +9,8 @@ on:
                 type: string
                 default: kovacsmiki
 
+permissions: write-all
+
 jobs:
     build-package-list:
         uses: ./.github/workflows/build.yml
