--- a/packages/visual-studio-code-bin/PKGBUILD
+++ b/packages/visual-studio-code-bin/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=visual-studio-code-bin
 _pkgname=visual-studio-code
-pkgver=1.79.2
+pkgver=1.80.1
 pkgrel=1
 pkgdesc="Visual Studio Code (vscode): Editor for building and debugging modern web and cloud applications (official binary version)"
 arch=('x86_64' 'i686' 'aarch64' 'armv7h')
@@ -31,10 +31,10 @@ sha256sums=('10a5ee77a89fc934bcbd3e2a41a2ec4bd51d3cd048702f6d739ecec9eb3a7c4b'
             '2264dd138b77358709aa49fb3a7fe7d1b05b7ab0715760d66958000107bdd3dc'
             '24ba09a6398c9781ed7cb6f1a9f6f38ec204899ba1f33db92638bf6d3cb0aed6'
             '8257a5ad82fa1f7dec11dfa064217b80df4cfec24f50cec7ca0ad62cf8295bfe')
-sha256sums_x86_64=('d0c64def4dc703cd9b8746e6728af51a6c33d496211927b2c2ea30a7a7876c7a')
+sha256sums_x86_64=('60e19eebe67d35cb23d17c1143c71d4c6c6538c041e334180b08de26ad9e0c77')
 sha256sums_i686=('64360439cc2fa596838062f7e6f9757b79d4b775a564f18bad6cbad154bf850c')
-sha256sums_aarch64=('24a8df2bb56594780bec3cec892cdc521e8b8e331928880fcf184b6d5cbe76d9')
-sha256sums_armv7h=('458a192dd3abf54ab04476cb4d690ab20d6e508224ac69cd742423dc69580f36')
+sha256sums_aarch64=('80b4e866b89b049e5356f1c7f6eeabddccf3aaa58c05cbd42a08fbc56284a59c')
+sha256sums_armv7h=('d611d51ae2efd6cc385de304540250fe5f9d5d512a23d40538d837b7bd0c8810')
 
 
 
@@ -65,7 +65,7 @@ package() {
   install -Dm 644 "${srcdir}/${_pkg}/resources/completions/bash/code" "${pkgdir}/usr/share/bash-completion/completions/code"
   install -Dm 644 "${srcdir}/${_pkg}/resources/completions/zsh/_code" "${pkgdir}/usr/share/zsh/site-functions/_code"
 
-  cp -r "${srcdir}/${_pkg}/"* "${pkgdir}/opt/${_pkgname}" -R
+  cp -r "${srcdir}/${_pkg}/"* "${pkgdir}/opt/${_pkgname}"
 
   # Launcher
 	install -m755 "${srcdir}/${_pkgname}-bin.sh" "${pkgdir}/usr/bin/code"
