--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,10 @@ on:
             artifact_name:
                 description: "The name of the produced artifact bundle."
                 value: ${{ jobs.build.outputs.artifact_name }}
+    pull_request:
+        types: [opened, synchronize]
+        branches:
+            - 'package/**'
 
 jobs:
     build:
@@ -34,11 +38,20 @@ jobs:
           artifact_name: ${{ steps.output-artifact_name.outputs.ARTIFACT_NAME }}
         steps:
             - uses: actions/checkout@v3
+            - if: github.event_name == 'pull_request'
+              run: |
+                echo "BUILD_TYPE=p" >> $GITHUB_ENV
+                ref_name="${{ github.ref_name }}"
+                echo "TARGET_NAME=${ref_name##*/}" >> $GITHUB_ENV
+            - if: github.event_name != 'pull_request'
+              run: |
+                echo "BUILD_TYPE=${{ inputs.build_type }}" >> $GITHUB_ENV
+                echo "TARGET_NAME=${{ inputs.target_name }}" >> $GITHUB_ENV
             - run: |
                 out_dir=$(mktemp -d)
                 chmod 777 $out_dir
                 echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
-                docker run --rm --pull always -t -v $(pwd)/packages:/tmp/workdir:ro -w /tmp/workdir -v $(pwd)/build_orders:/tmp/build_orders:ro -v $out_dir:/tmp/output:rw -v $(pwd)/docker/makepkg.conf:/etc/makepkg.conf:ro -v $(pwd)/docker/build_package.sh:/build_package.sh:ro ghcr.io/mortyr45/archlinux:devtools bash /build_package.sh -${{ inputs.build_type }} ${{ inputs.target_name }}
+                docker run --rm --pull always -t -v $(pwd)/packages:/tmp/workdir:ro -w /tmp/workdir -v $(pwd)/build_orders:/tmp/build_orders:ro -v $out_dir:/tmp/output:rw -v $(pwd)/docker/makepkg.conf:/etc/makepkg.conf:ro -v $(pwd)/docker/build_package.sh:/build_package.sh:ro ghcr.io/mortyr45/archlinux:devtools bash /build_package.sh -${{ env.BUILD_TYPE }} ${{ env.TARGET_NAME }}
                 echo "OUT_DIR=$out_dir" >> $GITHUB_ENV
                 echo "ARTIFACT_NAME=built_packages" >> $GITHUB_ENV
             - uses: crazy-max/ghaction-import-gpg@v5
