--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-run-name: Build ${{ github.event.inputs.build_type }} ${{ github.event.inputs.target_name }}.
 on:
     workflow_dispatch:
         inputs:
@@ -40,7 +39,7 @@ jobs:
             - if: github.event_name == 'pull_request'
               run: |
                 echo "BUILD_TYPE=p" >> $GITHUB_ENV
-                ref_name="${{ github.ref_name }}"
+                ref_name="${{ github.head_ref }}"
                 echo "TARGET_NAME=${ref_name##*/}" >> $GITHUB_ENV
             - if: github.event_name != 'pull_request'
               run: |
