--- a/.github/workflows/create_package_update_pr.yml
+++ b/.github/workflows/create_package_update_pr.yml
@@ -11,7 +11,7 @@ jobs:
         steps:
             - run: |
                 wget https://aur.archlinux.org/cgit/aur.git/snapshot/${{ inputs.package_name }}.tar.gz
-                tar --overwrite -xf visual-studio-code-bin.tar.gz -C packages/${{ inputs.package_name }} --strip-components=1
+                tar --overwrite -xf visual-studio-code-bin.tar.gz -C ${{ inputs.package_name }} --strip-components=1
                 packages/${{ inputs.package_name }}
                 pkgver=$(cat .SRCINFO | grep pkgver | cut -d' ' -f 3)
                 pkgrel=$(cat .SRCINFO | grep pkgrel | cut -d' ' -f 3)
