--- a/.github/workflows/create_package_update_pr.yml
+++ b/.github/workflows/create_package_update_pr.yml
@@ -9,6 +9,7 @@ jobs:
     create_pr:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
             - run: |
                 wget https://aur.archlinux.org/cgit/aur.git/snapshot/${{ inputs.package_name }}.tar.gz
                 ls
