--- a/.github/workflows/create_package_update_pr.yml
+++ b/.github/workflows/create_package_update_pr.yml
@@ -13,8 +13,8 @@ jobs:
             - run: |
                 wget https://aur.archlinux.org/cgit/aur.git/snapshot/${{ inputs.package_name }}.tar.gz
                 ls
-                tar --overwrite -xf ${{ inputs.package_name }}.tar.gz -C package/${{ inputs.package_name }} --strip-components=1
-                packages/${{ inputs.package_name }}
+                tar --overwrite -xf ${{ inputs.package_name }}.tar.gz -C packages/${{ inputs.package_name }} --strip-components=1
+                cd packages/${{ inputs.package_name }}
                 pkgver=$(cat .SRCINFO | grep pkgver | cut -d' ' -f 3)
                 pkgrel=$(cat .SRCINFO | grep pkgrel | cut -d' ' -f 3)
                 git checkout package/${{ inputs.package_name }}
