--- a/.github/workflows/create_package_update_pr.yml
+++ b/.github/workflows/create_package_update_pr.yml
@@ -28,6 +28,7 @@ jobs:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - uses: peter-evans/create-pull-request@v5
               with:
+                token: ${{ secrets.REPO_TOKEN }}
                 add-paths: |
                     packages/*
                 commit-message: "${{ inputs.package_name }} v${{ env.PKGVER }}-${{ env.PKGREL }}"
