--- a/.github/workflows/create_package_update_pr.yml
+++ b/.github/workflows/create_package_update_pr.yml
@@ -5,10 +5,6 @@ on:
                 type: string
                 required: true
 
-permissions:
-    contents: write
-    pull-requests: write
-
 jobs:
     create_pr:
         runs-on: ubuntu-latest
@@ -32,7 +28,7 @@ jobs:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             - uses: peter-evans/create-pull-request@v5
               with:
-                #token: ${{ secrets.REPO_TOKEN }}
+                token: ${{ secrets.REPO_TOKEN }}
                 add-paths: |
                     packages/*
                 commit-message: "${{ inputs.package_name }} v${{ env.PKGVER }}-${{ env.PKGREL }}"
