--- a/.github/workflows/create_package_update_pr.yml
+++ b/.github/workflows/create_package_update_pr.yml
@@ -9,16 +9,30 @@ jobs:
     create_pr:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
             - run: |
                 wget https://aur.archlinux.org/cgit/aur.git/snapshot/${{ inputs.package_name }}.tar.gz
-                tar --overwrite -xf visual-studio-code-bin.tar.gz -C packages/${{ inputs.package_name }} --strip-components=1
-                packages/${{ inputs.package_name }}
+                ls
+                tar --overwrite -xf ${{ inputs.package_name }}.tar.gz -C packages/${{ inputs.package_name }} --strip-components=1
+                cd packages/${{ inputs.package_name }}
                 pkgver=$(cat .SRCINFO | grep pkgver | cut -d' ' -f 3)
+                echo "PKGVER=$pkgver" >> $GITHUB_ENV
                 pkgrel=$(cat .SRCINFO | grep pkgrel | cut -d' ' -f 3)
-                git checkout package/${{ inputs.package_name }}
-                git add .
-                git commit -m "${{ inputs.package_name }} v$pkgver-$pkgrel"
-                git push
-                gh pr create -B master -H package/${{ inputs.package_name }} --title "${{ inputs.package_name }} v$pkgver-$pkgrel" --body 'Created by Github action'
+                echo "PKGREL=$pkgrel" >> $GITHUB_ENV
+                #git checkout -b package/${{ inputs.package_name }}
+                #git add .
+                #git commit -m "${{ inputs.package_name }} v$pkgver-$pkgrel"
+                #git push
+                #gh pr create -B master -H package/${{ inputs.package_name }} --title "${{ inputs.package_name }} v$pkgver-$pkgrel" --body 'Created by Github action'
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - uses: peter-evans/create-pull-request@v5
+              with:
+                token: ${{ secrets.REPO_TOKEN }}
+                add-paths: |
+                    packages/*
+                commit-message: "${{ inputs.package_name }} v${{ env.PKGVER }}-${{ env.PKGREL }}"
+                branch: "package/${{ inputs.package_name }}"
+                base: master
+                title: "${{ inputs.package_name }} v${{ env.PKGVER }}-${{ env.PKGREL }}"
+                body: ""
