update rkdeveloptool PKGBUILD

--- a/packages/rkdeveloptool/PKGBUILD
+++ b/packages/rkdeveloptool/PKGBUILD
@@ -1,32 +1,38 @@
-# Maintainer: crab2313 <crab2313@gmail.com>
+# Maintainer: yjun <jerrysteve1101 at gmail dot com>
+# Contributor: crab2313 <crab2313@gmail.com>
 
-pkgname=rkdeveloptool
-pkgver=69
+pkgname=rkdeveloptool-git
+_pkgname=${pkgname%-git}
+pkgver=1.32.r83.304f073
 pkgrel=1
-pkgdesc='Development tool for Rockchip SOC'
-arch=('x86_64' 'aarch64')
+epoch=1
+pkgdesc='The firmware upgrade tool for Rockchip SoC, consider to be a opensource version of upgrade_tool'
+arch=('x86_64' 'armv7h' 'aarch64')
 url='https://github.com/rockchip-linux/rkdeveloptool'
-license=('GPL2')
+license=('GPL-2.0-only')
+provides=($_pkgname)
+conflicts=($_pkgname)
 makedepends=('git')
-depends=('libusb')
+depends=('glibc' 'gcc-libs' 'libusb')
 source=('git+https://github.com/rockchip-linux/rkdeveloptool.git')
 sha256sums=('SKIP')
 
 pkgver() {
-	cd "$srcdir/$pkgname"
-	git rev-list --count HEAD
+  cd "$srcdir/$_pkgname"
+  version=$(grep -oP 'AC_INIT\(\[Rockchip rkdeveloptool\], \K[\d.]+' configure.ac)
+  printf "%s.r%s.%s" "$version" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
 }
 
 build() {
-	cd "$srcdir/$pkgname"
-	sed -i 's/-Werror/-Werror -Wno-format-truncation/' Makefile.am
-	autoreconf -i
-	./configure --prefix=/usr --disable-werror
-	make
+  cd "$srcdir/$_pkgname"
+  # sed -i 's/-Werror/-Werror -Wno-format-truncation/' Makefile.am
+  autoreconf -i
+  ./configure --prefix=/usr
+  make
 }
 
 package() {
-	cd "$srcdir/$pkgname"
-    make DESTDIR=$pkgdir install
-    install -Dm644 99-rk-rockusb.rules -t "$pkgdir/usr/lib/udev/rules.d/"
+  cd "$srcdir/$_pkgname"
+  make DESTDIR=$pkgdir install
+  install -Dm644 99-rk-rockusb.rules -t "$pkgdir/usr/lib/udev/rules.d/"
 }
